環境変数の見直し
